feat: add project structure, add API data

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,3 +3,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.center-wrapper {
+  width: 100%;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 0 10px;
+}
