--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -4,6 +4,13 @@
   box-sizing: border-box;
 }
 
+#app {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+}
+
 .center-wrapper {
   width: 100%;
   max-width: 320px;
